Changing title of HTM file

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,7 @@
+
 <!DOCTYPE html>
 <head>
-	<title></title>
+	<title>Ce ci est le titre</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -14,7 +15,8 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+
+		Just some content
 		</p>
 	</main>
 	<footer class="container">
