Adding comment to file

--- a/simple.html
+++ b/simple.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <head>
 	<title>Ce ci est le titre</title>
+	<!-- Comment here -->
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
