Making changes to simple.html

--- a/simple.html
+++ b/simple.html
@@ -16,12 +16,12 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-
+		Some additional text
 		Just some content
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Company 2005
 	</footer>
 </body>
 </html>
