--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,6 @@
 
+
+
 <!DOCTYPE html>
 <head>
 	<title>Ce ci est le titre</title>
@@ -18,6 +20,7 @@
 		<p>
 
 		Just some content
+		Donc ceci va rester
 		</p>
 	</main>
 	<footer class="container">
