Done with simple.html

--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 
 <!DOCTYPE html>
 <head>
-	<title>Ce ci est le titre</title>
+	<title>updating title</title>
 	<!-- Comment here -->
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
@@ -21,6 +21,7 @@
 
 		Just some content
 		Donc ceci va rester
+		Actualisation after stash apply
 		</p>
 	</main>
 	<footer class="container">
